pequeño cambio en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,9 @@
             <div class="actions"></div>
         </div>
 
-        <form>
-            <input type="text" class="username" placeholder="Escribe tu username">
-            <input type="text" class="message" placeholder="Escribe un mensaje">
-            <input type="submit" class="send" value="Enviar">
-        </form>
+        <input type="text" class="username" placeholder="Escribe tu username">
+        <input type="text" class="message" placeholder="Escribe un mensaje">
+        <button class="send">Enviar</button>
     </div>  
 
     <script src="/socket.io/socket.io.js"></script>
