he añadido la funcionalidad de enviar imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,12 @@
 
         <input type="text" class="username" placeholder="Escribe tu username">
         <input type="text" class="message" placeholder="Escribe un mensaje">
+        <input type="file" class="file">
         <button class="send">Enviar</button>
     </div>  
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="chat.js"></script>
+    <script src="subir-img.js"></script>
 </body>
 </html>
